# ot-harjoitustyo

./: README.md
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: HSLkaavio.md  umlkaavio.md
shoppingList/: .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
shoppingList/data/: shopping.json  users.json
shoppingList/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimuusmaarittely.md
shoppingList/src/: index.py
shoppingList/src/entities/: shopping.py  user.py
shoppingList/src/repository/: json_utils.py  shopping_repository.py  user_repository.py
shoppingList/src/services/: auth_service.py  shopping_list_service.py
shoppingList/src/tests/: test_shopping_repository.py  test_user_repository.py
shoppingList/src/tests/services/: auth_sevice_test.py  shopping_service_test.py
shoppingList/src/ui/: base_view.py  login_view.py  register_view.py  shopping_view.py  ui.py
