[project]
name = "shoppinglist"
version = "0.1.0"
description = ""
authors = [
    {name = "eetu huttula",email = "eetuhuttula99@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "invoke (>=2.2.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "coverage (>=7.11.3,<8.0.0)",
    "invoke (>=2.0.0,<3.0.0)",
    "pylint (>=4.0.3,<5.0.0)",
    "autopep8 (>=2.3.2,<3.0.0)"
]
